# PROYECTO_ALSE

./: .gitignore  README.md  structure_class_sensors.mdj
DB_sensor/: CMakeLists.txt  CMakeLists.txt.user.519cd7f  ledindicator.cpp  ledindicator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-DB_sensor-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  DB_sensor  Makefile  base_datos.db  cmake_install.cmake
build-DB_sensor-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-3401a4ccc3f08d03c8d9.json  (+26 more)
build-DB_sensor-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-33d24515bf63f3f77bf9.json  codemodel-v2-97e7f000d3a7b4e90c5c.json  index-2023-12-05T20-42-21-0513.json  target-DB_sensor-Debug-e246e14d5e986d3877d0.json
build-DB_sensor-Desktop-Debug/DB_sensor_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-DB_sensor-Desktop-Debug/DB_sensor_autogen/include/: ui_mainwindow.h
build-DB_sensor-Desktop-RelWithDebInfo/: CMakeCache.txt  Makefile  cmake_install.cmake
build-DB_sensor-Desktop-RelWithDebInfo/DB_sensor_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-DB_sensor-Desktop-RelWithDebInfo/DB_sensor_autogen/include/: ui_mainwindow.h
console/: CMakeLists.txt  Humedad.cpp  Precipitacion.cpp  Sensor.cpp  Velocidad.cpp  Velocidad.h  main.cpp
console/DB_sensor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
file_project/Model/: Humedad.cpp  Humedad.h  Luz.cpp  Luz.h  Precipitacion.cpp  Precipitacion.h  Sensor.cpp  Sensor.h  Temperatura.cpp  Temperatura.h  Tempertatura.cpp  Tempertatura.h  Velocidad.cpp  Velocidad.h  Viento.cpp  Viento.h  main.cpp
file_project/build-db_SENSORES-Desktop-Debug/: CMakeCache.txt
file_project/console/: CMakeLists.txt  Humedad.h  Luz.h  Temperatura.h  main.cpp
file_project/console/DB_sensor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
file_project/db_SENSORES/: CMakeLists.txt  main.cpp
(+6 files in other folders)
